3.5.0/_sources/gallery/frontpage/histogram.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/frontpage/histogram.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_frontpage_histogram.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_frontpage_histogram.py:


===========================
Frontpage histogram example
===========================

This example reproduces the frontpage histogram example.

.. GENERATED FROM PYTHON SOURCE LINES 8-23



.. image-sg:: /gallery/frontpage/images/sphx_glr_histogram_001.png
   :alt: histogram
   :srcset: /gallery/frontpage/images/sphx_glr_histogram_001.png, /gallery/frontpage/images/sphx_glr_histogram_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np


    random_state = np.random.RandomState(19680801)
    X = random_state.randn(10000)

    fig, ax = plt.subplots()
    ax.hist(X, bins=25, density=True)
    x = np.linspace(-5, 5, 1000)
    ax.plot(x, 1 / np.sqrt(2*np.pi) * np.exp(-(x**2)/2), linewidth=4)
    ax.set_xticks([])
    ax.set_yticks([])
    fig.savefig("histogram_frontpage.png", dpi=25)  # results in 160x120 px image


.. _sphx_glr_download_gallery_frontpage_histogram.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: histogram.py <histogram.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: histogram.ipynb <histogram.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
